--- a/wercker.yml
+++ b/wercker.yml
@@ -12,9 +12,10 @@ build:
   # Read more about steps on our dev center:
   # http://devcenter.wercker.com/docs/steps/index.html
   steps:
-    - arjen/hugo-build@1.10.1
+    - arjen/hugo-build@1.10.1:
       theme: stormbots
       version: "0.15"
+
 deploy:
   steps:
     - install-packages:
