--- a/wercker.yml
+++ b/wercker.yml
@@ -22,4 +22,4 @@ deploy:
     - lukevivier/gh-pages@0.2.1:
       token: $GIT_TOKEN
       domain: stormbots.github.io
-      basedir: public
+      basedir: __site
