--- a/wercker.yml
+++ b/wercker.yml
@@ -3,23 +3,14 @@
 # Read more about containers on our dev center
 # http://devcenter.wercker.com/docs/containers/index.html
 box: debian
-
-# This is the build pipeline. Pipelines are the core of wercker
-# Read more about pipelines on our dev center
-# http://devcenter.wercker.com/docs/pipelines/index.html
 build:
-  # Steps make up the actions in your pipeline
-  # Read more about steps on our dev center:
-  # http://devcenter.wercker.com/docs/steps/index.html
-  steps:
-    - arjen/hugo-build@1.10.1:
-      version: "0.15"
-
+    steps:
+        - arjen/hugo-build@1.10.1:
+            version: "0.15"
 deploy:
-  steps:
-    - install-packages:
-      packages: git ssh-client
-    - lukevivier/gh-pages@0.2.1:
-      token: $GIT_TOKEN
-      domain: stormbots.github.io
-      basedir: _site
+    steps:
+        - install-packages:
+            packages: git ssh-client
+        - lukevivier/gh-pages@0.2.1:
+            token: $GIT_TOKEN
+            basedir: public
