--- a/wercker.yml
+++ b/wercker.yml
@@ -14,3 +14,4 @@ deploy:
         - lukevivier/gh-pages@0.2.1:
             token: $GIT_TOKEN
             basedir: public
+            branch: master
