--- a/wercker.yml
+++ b/wercker.yml
@@ -14,6 +14,5 @@ deploy:
         - lukevivier/gh-pages@0.2.1:
             token: $GIT_TOKEN
             basedir: public
-            #branch: master
-
-
+            branch: master
+            repo: stormbots/stormbots.github.io
