--- a/wercker.yml
+++ b/wercker.yml
@@ -7,11 +7,12 @@ build:
     steps:
         - arjen/hugo-build@1.10.1:
             version: "0.15"
+            flags: --baseURL=https://stormbots.github.io/
 deploy:
     steps:
         - install-packages:
             packages: git ssh-client
-        - lukevivier/gh-pages@0.2.1:
+        - lukevivier/gh-pages@0.2.3:
             token: $GIT_TOKEN
             basedir: public
             branch: master
