--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,6 @@ theme = "stormbots"
 
 
 relativeURLs=  true
-metaDataFormat = "toml" 
 
 # if true, use /filename.html instead of /filename/
 uglyURLs =  false
@@ -18,10 +17,30 @@ canonifyurls = true
 # Determines how many posts per page
 paginate = 10
 
-[permalinks]
-  post="/:year/:month/:title/"
+# Enable :heart: style emojis in posts
+enableEmoji= true # False by default
 
-  
+[permalinks]
+post="/:year/:month/:title/"
+
+
+
+# Configuration of the Markdown engine used by Hugo
+[blackfriday]
+# By default, makes 3/5 and other fractions smaller and stacks them.
+# This can be annoying for dates or other technical writing, so it's disabled.
+# NOTE: This still may happen with 1/2, 2/3, and 3/4 even when disabled >_>
+fractions = false
+
+
+
+[taxonomies]
+ tag = "tags"
+ category = "categories"
+ season = "seasons"
+ partner = "partners"
+
+# This shows up as a variable under .Site.Params
 [params]
     # Shown in the home page
     subtitle = "Skyview FRC 2811"
@@ -29,15 +48,8 @@ paginate = 10
     # CSS name for highlight.js
     highlightjs = "androidstudio"
     dateFormat = "02 Jan 2006, 15:04"
-    
-    
-[taxonomies]
-   tag = "tags"
-   category = "categories"
-   season = "seasons"
-   partner = "partners"
-    
-# This is knappy. This should be either 
+
+# This is knappy. This should be either
 # A: Determined by the page, or B
 # B Determined by a data file or something
 # I'm of the opinion config.yml should not contain templating
@@ -82,7 +94,7 @@ paginate = 10
       weight = 5
       identifier = "partners"
       url = "/partners/"
-      
+
 [social]
 # Link your social networking accouns to the side menu
 # by entering your username or ID.
