--- a/wercker.yml
+++ b/wercker.yml
@@ -12,7 +12,7 @@ deploy:
     steps:
         - install-packages:
             packages: git ssh-client
-        - lukevivier/gh-pages:
+        - gh-pages:
             token: $GIT_TOKEN
             basedir: public
             branch: master
