--- a/wercker.yml
+++ b/wercker.yml
@@ -12,9 +12,8 @@ deploy:
     steps:
         - install-packages:
             packages: git ssh-client
-        - gh-pages:
+        - nztomas/gh-pages:
             token: $GIT_TOKEN
             basedir: public
             branch: master
             repo: stormbots/stormbots.github.io
-            remote: origin
