--- a/config.toml
+++ b/config.toml
@@ -16,9 +16,9 @@ publishDir = "docs"
     DateForm = "January 2, 2006"
 
     showSubheader = true
-    showServices = true
-    showRecentWorks = true
-    showDownload = true
+    showServices = false
+    showRecentWorks = false
+    showDownload = false
     showClients = false
 
     footerEnableContact = false
