--- a/data/Partners.yml
+++ b/data/Partners.yml
@@ -76,7 +76,7 @@ List:
   from: 2008-2018
   years: [ 2008,2009,2001,2011, 2012, 2013, 2014, 2015, 2015, 2016, 2017, 2018 ]
   level: torrent
-  logo: hp.jpg
+  logo: hp.png
   url: http://www.hp.com/
   desc: >
     Our vision is to create technology that makes life better for everyone, everywhere — every person, every organization, and every community around the globe.
