Added Mission Statement, About, Game Descriptions, and some Subteam Photos

--- a/config.toml
+++ b/config.toml
@@ -106,6 +106,12 @@ publishDir = "public"
                     weight = 22
                     parent = "games"
 
+                    [[menu.main]]
+                      name = "FIRST Lunacy"
+                      url = "/lunacy/"
+                      weight = 23
+                      parent = "games"
+
 [[menu.main]]
     name = "Media"
     url = "/media/"
