--- a/admin/config.yml
+++ b/admin/config.yml
@@ -12,3 +12,4 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Description", name: "description", widget: "text", required: false}
