--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,9 +3,9 @@ backend:
 media_folder: "images"
 public_folder: "/images"
 collections:
-  - name: "posts/2018" # Used in routes, e.g., /admin/collections/blog
+  - name: "2018-posts" # Used in routes, e.g., /admin/collections/blog
     label: "2018 Posts" # Used in the UI
-    folder: "posts" # The path to the folder where the documents are stored
+    folder: "posts/2018" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
