--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,9 +3,9 @@ backend:
 media_folder: "static/images"
 public_folder: "/images"
 collections:
-- name: "posts/2018" # Used in routes, e.g., /admin/collections/blog
+- name: "posts-2018" # Used in routes, e.g., /admin/collections/blog
   label: "Posts - 2018" # Used in the UI
-  folder: "static/content/posts/2018" # The path to the folder where the documents are stored
+  folder: "content/posts/2018" # The path to the folder where the documents are stored
   create: true # Allow users to create new documents in this collection
   slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
   fields: # The fields for each document, usually in front matter
