--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,19 +1,19 @@
 backend:
   name: git-gateway
-media_folder: "static/images"
-public_folder: "/images"
+media_folder: "static/images/uploads"
+public_folder: "/images/uploads"
 collections:
 - name: "pages"
   label: "Pages"
   files:
-    - file: "content/about.md"
+    - file: "about.md"
       name: "about"
       label: "About"
       fields:
         - { label: "Title", name: "title", widget: "string"}
-- name: "posts-2018" # Used in routes, e.g., /admin/collections/blog
-  label: "Posts - 2018" # Used in the UI
-  folder: "content/posts/2018" # The path to the folder where the documents are stored
+- name: "posts" # Used in routes, e.g., /admin/collections/blog
+  label: "Posts" # Used in the UI
+  folder: "content/posts" # The path to the folder where the documents are stored
   create: true # Allow users to create new documents in this collection
   slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
   fields: # The fields for each document, usually in front matter
