--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
   name: git-gateway
+  branch: feature/netlify
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
 collections:
