about page at least

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -7,7 +7,7 @@ collections:
 - name: "pages"
   label: "Pages"
   files:
-    - file: "about.md"
+    - file: "content/about.md"
       name: "about"
       label: "About"
       fields:
