--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,15 +4,12 @@ backend:
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
 collections:
-- name: "pages"
-  label: "Pages"
-  files:
-    - file: "content/about.md"
-      name: "about"
-      label: "About"
-      fields:
-        - {label: "Title", name: "title", widget: "string"}
-        - {label: "Body", name: "body", widget: "markdown"}
+- name: "about"
+  label: "About Page"
+  folder: "layouts/partials/about"
+  fields:
+    - {label: "Title", name: "title", widget: "string"}
+    - {label: "Body", name: "body", widget: "markdown"}
 - name: "posts" # Used in routes, e.g., /admin/collections/blog
   label: "Posts" # Used in the UI
   folder: "content/posts" # The path to the folder where the documents are stored
