--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,6 +8,7 @@ collections:
   label: "About Page"
   folder: "layouts/partials/about"
   fields:
+    - {label: "Title", name: "title", widget: "string"}
     - {label: "Body", name: "body", widget: "markdown"}
 - name: "posts" # Used in routes, e.g., /admin/collections/blog
   label: "Posts" # Used in the UI
