--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,14 +6,17 @@ public_folder: "/images/uploads"
 collections:
 - name: "about"
   label: "About Page"
-  folder: "layouts/partials/about"
-  fields:
-    - {label: "Body", name: "body", widget: "markdown"}
-- name: "about-content"
-  label: "About - main content"
-  file: "layouts/partials/about/content.md"
-  fields:
-    - {label: "Body", name: "body", widget: "markdown"}
+  files:
+    - name: "about-content"
+      label: "About - main content"
+      file: "layouts/partials/about/content.md"
+      fields:
+        - {label: "Body", name: "body", widget: "markdown"}
+    - name: "about-competitions"
+      label: "About - Competitions"
+      file: "layouts/partials/about/competitions.md"
+      fields:
+        - {label: "Body", name: "body", widget: "markdown"}
 - name: "posts" # Used in routes, e.g., /admin/collections/blog
   label: "Posts" # Used in the UI
   folder: "content/posts" # The path to the folder where the documents are stored
